einstellung/src/snapshots/einstellung__tests__config_enum_incorrect.snap
---
source: einstellung/src/tests.rs
expression: "print_res(res, false)"
---
error:
configuration source inline json: JSON Parse Error: unknown variant `ModeZ`, expected one of `ModeA`, `ModeB`, `ModeC` at line 1 column 17
Source {
    source: ConfigSource {
        label: "inline json",
    },
    error: Json(
        Error("unknown variant `ModeZ`, expected one of `ModeA`, `ModeB`, `ModeC`", line: 1, column: 17),
    ),
}
