einstellung/src/snapshots/einstellung__tests__config_enum_missing.snap
---
source: einstellung/src/tests.rs
expression: "print_res(res, true)"
---
pass:
ConfigWithEnum {
    mode: ModeC,
}
