einstellung/src/snapshots/einstellung__tests__missing_field.snap
---
source: einstellung/src/tests.rs
expression: "print_res(res, false)"
---
error:
configuration source inline json: Missing required configuration field: 'AppConfig::app_name'
Source {
    source: ConfigSource {
        label: "inline json",
    },
    error: MissingField(
        FieldPath {
            base_type: "AppConfig",
            field: "app_name",
            path: [],
        },
    ),
}
