einstellung/src/snapshots/einstellung__tests__success.snap
---
source: einstellung/src/tests.rs
expression: print_res(res)
---
pass:
AppConfig {
    app_name: "foo",
    network: NetworkConfig {
        listen: ListenConfig {
            address: 192.168.0.1,
            port: 443,
        },
    },
}
