einstellung/src/snapshots/einstellung__tests__user_config.snap
---
source: einstellung/src/tests.rs
expression: "print_res(res, true)"
---
pass:
UserConfig {
    users: {
        "bob",
        "root",
    },
}
