einstellung/src/snapshots/einstellung__tests__user_config_allowed_empty.snap
---
source: einstellung/src/tests.rs
expression: "print_res(res, true)"
---
pass:
UserConfig1 {
    users: {},
}
