einstellung/src/snapshots/einstellung__tests__user_config_no_default.snap
---
source: einstellung/src/tests.rs
expression: "print_res(res, true)"
---
pass:
UserConfig2 {
    users: {
        "bob",
        "root",
    },
}
