einstellung/src/snapshots/einstellung__tests__user_config_no_default_not_allowed_empty.snap
---
source: einstellung/src/tests.rs
expression: "print_res(res, false)"
---
error:
configuration source inline json: Missing required configuration field: 'UserConfig2::users'
Source {
    source: ConfigSource {
        label: "inline json",
    },
    error: MissingField(
        FieldPath {
            base_type: "UserConfig2",
            field: "users",
            path: [],
        },
    ),
}
